Lint docs with Vale

--- a/docs/.vale.ini
+++ b/docs/.vale.ini
@@ -1,6 +1,8 @@
-# This goes in a file named either `.vale.ini` or `_vale.ini`.
 StylesPath = ../test/docs
 MinAlertLevel = suggestion
 
-[*.{md,rst}]
+[[!_]**.{md,rst}]
 BasedOnStyles = IBMQuantum
+
+[apidocs/ibm-runtime.rst]
+IBMQuantum.Headings = NO
