Lint docs with Vale

--- a/docs/.vale.ini
+++ b/docs/.vale.ini
@@ -2,5 +2,8 @@
 StylesPath = ../test/docs
 MinAlertLevel = suggestion
 
-[*.{md,rst}]
+[[!_]**.{md,rst}]
 BasedOnStyles = IBMQuantum
+
+[apidocs/ibm-runtime.rst]
+IBMQuantum.Headings = NO
