Tweak Vale rules based on feedback

--- a/docs/.vale.ini
+++ b/docs/.vale.ini
@@ -6,3 +6,7 @@ BasedOnStyles = IBMQuantum
 
 [apidocs/ibm-runtime.rst]
 IBMQuantum.Headings = NO
+
+# skip './stubs'
+[stubs/**]
+BasedOnStyles = ''
